2004-12-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (ref): rewrite last two redundant paragraphs.

2004-12-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Macro Details): document @c kludge in macro
	definitions to work around some newline problems.  (From Werner.)

2004-12-05  Karl Berry  <karl@gnu.org>

	* makeinfo/html.c (add_escaped_anchor_name): prefix g_t if the
	nodename begins with a nonletter.  Ugh.
	* doc/texinfo.txi (HTML Xref Node Name Expansion): document this.
	http://ff0.org/pipermail/texinfo-pretest/2004-December/000210.html
	
	* doc/texinfo.txi (HTML Xref 8-bit Character Expansion): define
	behavior for Unicode code points above 0xfff.

	* makeinfo/makeinfo.c (reader_loop): <wbr> didn't make it into
	HTML 4, remove it.  Sigh.
	texinfo-pretest mail from wl, 05 Dec 2004 23:39:05 +0100.

2004-12-02  Karl Berry  <karl@gnu.org>

	* configure.ac (install-warnings): simplify default case.  From te.

2004-12-01  Karl Berry  <karl@gnu.org>

	* pretest version 4.7.90.

	* util/texi2dvi (recode): new option, off by default.
	Unconditionally calling recode seems problematic, when there
	hasn't been a release for years and its Texinfo support is less than
	perfect.

2004-11-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Quotations and Examples): @quotation does not
	reduce interparagraph spacing.
	
	* makeinfo/node.c (cm_node) <html>: do not bother calling
	add_html_nodes in the split case, the filename is wrong.

2004-11-29  Karl Berry  <karl@gnu.org>

	Support for writing <a name="..."> using the old-style node name
		to HTML name conversion, to keep the gcc folks happy.
	* makeinfo/node.c (add_html_names): new routine, factoring out
	common code (plus new code) from cm_node.
	(cm_node) <html>: call it.
	* makeinfo/makeinfo.h (OLD_HTML_SAFE, OLD_URL_SAFE_CHAR):
	(re)define these.
	* makeinfo/html.c (add_escaped_anchor_name): take new argument to
	optionally output the old-style conversion.
	(add_anchor_name): change call.